# air_quality_index_api

./: .gitignore  APIs_testing.md  Dockerfile  Makefile  README.md  pyproject.toml
dataset/: df_aod_raw.csv
models/lightgbm/: CO_quantrac_lightgbm_1h  CO_quantrac_lightgbm_24h  CO_quantrac_lightgbm_48h  CO_quantrac_lightgbm_72h  CO_quantrac_station_embedding.pkl  NO2_quantrac_lightgbm_1h  NO2_quantrac_lightgbm_24h  NO2_quantrac_lightgbm_48h  NO2_quantrac_lightgbm_72h  NO_cmaq_lightgbm_1h  NO_cmaq_lightgbm_24h  NO_cmaq_lightgbm_48h  NO_cmaq_lightgbm_72h  NO_cmaq_station_embedding.pkl  O3_quantrac_lightgbm_1h  O3_quantrac_lightgbm_24h  O3_quantrac_lightgbm_48h  O3_quantrac_lightgbm_72h  O3_quantrac_station_embedding.pkl  SO2_quantrac_lightgbm_1h  SO2_quantrac_lightgbm_24h  SO2_quantrac_lightgbm_48h  SO2_quantrac_lightgbm_72h
models/lightgbm_73_input_values/: CO_quantrac_lightgbm_24h  CO_quantrac_lightgbm_72h  NO2_quantrac_lightgbm_48h  NO2_quantrac_station_embedding.pkl  NO_cmaq_lightgbm_1h  NO_cmaq_lightgbm_24h  NO_cmaq_lightgbm_48h  NO_cmaq_lightgbm_72h  O3_quantrac_lightgbm_24h  SO2_quantrac_lightgbm_1h  SO2_quantrac_lightgbm_48h  SO2_quantrac_lightgbm_72h  SO2_quantrac_station_embedding.pkl
models/prediction/: aod_LSTMPrediction_1_future_with_CNNLSTMSeq2SeqReduction_14_features.keras  aod_LSTMPrediction_1_future_with_GRUSeq2SeqReduction_12_features.keras  aod_LSTMPrediction_1_future_with_LSTMSeq2SeqReduction_11_features.keras  aod_LSTMPrediction_2_future_with_CNNLSTMSeq2SeqReduction_13_features.keras  (+12 more)
src/: main.py
src/hiep/: hiep.py
temp/: filled_missing.csv
(+54 files in other folders)
