[project]
name = "air_quality_index_api"
version = "0.1.0"
description = ""
authors = [
    {name = "Hiep Phuc Thai",email = "itmanagertph@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "virtualenvwrapper (>=6.1.1,<7.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "keras (>=3.11.3,<4.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "air_quality_index_api", from = "src"}]

[tool.poetry.scripts]
start = "server:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
